syntax = "proto3";

package by.dzikovskiy.usermicroservice;

service HelloService {
  rpc sayHello(HelloRequest) returns (HelloResponse) {}
}

message HelloRequest {
  string message = 1;
}

message HelloResponse {
  string message = 1;
}